TFP-5065 rydde søknadsfrist etter omlegging frontend